src/main/java/antlr/assParser.java
// Generated from /home/diana/IdeaProjects/BigAssLang/src/main/java/antlr/ass.g4 by ANTLR 4.9.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class assParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, BOOL=3, ASSIGN=4, PLUS=5, MULTIPLY=6, DIVISION=7, MINUS=8, 
		POINT=9, COMMA=10, LEFT_SQUARE_BRACKET=11, RIGHT_SQUARE_BRACKET=12, LEFT_ROUND_BRACKET=13, 
		RIGHT_ROUND_BRACKET=14, LEFT_CURVY_BRACKET=15, RIGHT_CURVY_BRACKET=16, 
		LOWERCASE=17, UPPERCASE=18, ZERO=19, NATURAL=20, DIGIT=21, WS=22, NEWLINE=23, 
		AYE=24, GTFO=25, DOLLAR_SIGN=26, FUNKK=27, DROP=28, IF=29, ELSE=30, EQUAL=31, 
		GREATER=32, LESS=33, GREATER_OR_EQUAL=34, LESS_OR_EQUAL=35, NOT_EQUAL=36, 
		LOGICAL_AND=37, LOGICAL_OR=38, INVERSION=39;
	public static final int
		RULE_prog = 0, RULE_type = 1, RULE_arrayType = 2, RULE_varName = 3, RULE_value = 4, 
		RULE_arrayElement = 5, RULE_array = 6, RULE_intValue = 7, RULE_unsignedIntValue = 8, 
		RULE_floatValue = 9, RULE_boolValue = 10, RULE_getElement = 11, RULE_declare = 12, 
		RULE_assignmentLeftPart = 13, RULE_assignmentRightPart = 14, RULE_assign = 15, 
		RULE_cast = 16, RULE_statement = 17, RULE_bodyContent = 18, RULE_signature = 19, 
		RULE_attribute = 20, RULE_drop = 21, RULE_func = 22, RULE_funcCallAttribute = 23, 
		RULE_funcCall = 24, RULE_comparisonOperator = 25, RULE_logicalComparisonOperator = 26, 
		RULE_comparisonAtom = 27, RULE_comparisonStatement = 28, RULE_comparisonLogicalStatement = 29, 
		RULE_comparisonLogicalStatementWithBrackets = 30, RULE_ifBlock = 31, RULE_elifBlock = 32, 
		RULE_elseBlock = 33, RULE_ifClause = 34, RULE_arithmeticOperator = 35, 
		RULE_arithmeticAtom = 36, RULE_arithmeticAtomWithBrackets = 37, RULE_arithmeticExpression = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "type", "arrayType", "varName", "value", "arrayElement", "array", 
			"intValue", "unsignedIntValue", "floatValue", "boolValue", "getElement", 
			"declare", "assignmentLeftPart", "assignmentRightPart", "assign", "cast", 
			"statement", "bodyContent", "signature", "attribute", "drop", "func", 
			"funcCallAttribute", "funcCall", "comparisonOperator", "logicalComparisonOperator", 
			"comparisonAtom", "comparisonStatement", "comparisonLogicalStatement", 
			"comparisonLogicalStatementWithBrackets", "ifBlock", "elifBlock", "elseBlock", 
			"ifClause", "arithmeticOperator", "arithmeticAtom", "arithmeticAtomWithBrackets", 
			"arithmeticExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'INT'", "'FLOAT'", "'BOOL'", "'='", "'+'", "'*'", "'/'", "'-'", 
			"'.'", "','", "'['", "']'", "'('", "')'", "'{'", "'}'", null, null, "'0'", 
			null, null, null, null, "'AYE'", "'GTFO'", "'$'", "'FUNKK'", "'DROP'", 
			"'IF'", "'ELSE'", "'=='", "'>'", "'<'", "'>='", "'<='", "'!='", "'&&'", 
			"'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "FLOAT", "BOOL", "ASSIGN", "PLUS", "MULTIPLY", "DIVISION", 
			"MINUS", "POINT", "COMMA", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
			"LEFT_ROUND_BRACKET", "RIGHT_ROUND_BRACKET", "LEFT_CURVY_BRACKET", "RIGHT_CURVY_BRACKET", 
			"LOWERCASE", "UPPERCASE", "ZERO", "NATURAL", "DIGIT", "WS", "NEWLINE", 
			"AYE", "GTFO", "DOLLAR_SIGN", "FUNKK", "DROP", "IF", "ELSE", "EQUAL", 
			"GREATER", "LESS", "GREATER_OR_EQUAL", "LESS_OR_EQUAL", "NOT_EQUAL", 
			"LOGICAL_AND", "LOGICAL_OR", "INVERSION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ass.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public assParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(assParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(assParser.NEWLINE, i);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(78);
				match(NEWLINE);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				func();
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(85);
					match(NEWLINE);
					}
					}
					setState(88); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FUNKK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(assParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(assParser.FLOAT, 0); }
		public TerminalNode BOOL() { return getToken(assParser.BOOL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(assParser.LEFT_SQUARE_BRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(assParser.RIGHT_SQUARE_BRACKET, 0); }
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(LEFT_SQUARE_BRACKET);
			setState(97);
			type();
			setState(98);
			match(RIGHT_SQUARE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public List<TerminalNode> LOWERCASE() { return getTokens(assParser.LOWERCASE); }
		public TerminalNode LOWERCASE(int i) {
			return getToken(assParser.LOWERCASE, i);
		}
		public List<TerminalNode> UPPERCASE() { return getTokens(assParser.UPPERCASE); }
		public TerminalNode UPPERCASE(int i) {
			return getToken(assParser.UPPERCASE, i);
		}
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varName);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(LOWERCASE);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(101);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOWERCASE) | (1L << UPPERCASE) | (1L << ZERO) | (1L << NATURAL))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public IntValueContext intValue() {
			return getRuleContext(IntValueContext.class,0);
		}
		public FloatValueContext floatValue() {
			return getRuleContext(FloatValueContext.class,0);
		}
		public BoolValueContext boolValue() {
			return getRuleContext(BoolValueContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_value);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				intValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				floatValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				boolValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayElementContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public GetElementContext getElement() {
			return getRuleContext(GetElementContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ArrayElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitArrayElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayElementContext arrayElement() throws RecognitionException {
		ArrayElementContext _localctx = new ArrayElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayElement);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				value();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				varName();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				getElement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				funcCall();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public TerminalNode LEFT_CURVY_BRACKET() { return getToken(assParser.LEFT_CURVY_BRACKET, 0); }
		public List<ArrayElementContext> arrayElement() {
			return getRuleContexts(ArrayElementContext.class);
		}
		public ArrayElementContext arrayElement(int i) {
			return getRuleContext(ArrayElementContext.class,i);
		}
		public TerminalNode RIGHT_CURVY_BRACKET() { return getToken(assParser.RIGHT_CURVY_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(assParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(assParser.COMMA, i);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(LEFT_CURVY_BRACKET);
			setState(120);
			arrayElement();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(121);
				match(COMMA);
				setState(122);
				arrayElement();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(RIGHT_CURVY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntValueContext extends ParserRuleContext {
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public TerminalNode MINUS() { return getToken(assParser.MINUS, 0); }
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public IntValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitIntValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntValueContext intValue() throws RecognitionException {
		IntValueContext _localctx = new IntValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_intValue);
		int _la;
		try {
			int _alt;
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(ZERO);
				}
				break;
			case MINUS:
			case NATURAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(131);
					match(MINUS);
					}
				}

				setState(135); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(134);
						match(NATURAL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(137); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(139);
						_la = _input.LA(1);
						if ( !(_la==ZERO || _la==NATURAL) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(144);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnsignedIntValueContext extends ParserRuleContext {
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public UnsignedIntValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsignedIntValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitUnsignedIntValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnsignedIntValueContext unsignedIntValue() throws RecognitionException {
		UnsignedIntValueContext _localctx = new UnsignedIntValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unsignedIntValue);
		int _la;
		try {
			int _alt;
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(ZERO);
				}
				break;
			case NATURAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(149); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(148);
						match(NATURAL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(151); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ZERO || _la==NATURAL) {
					{
					{
					setState(153);
					_la = _input.LA(1);
					if ( !(_la==ZERO || _la==NATURAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatValueContext extends ParserRuleContext {
		public TerminalNode POINT() { return getToken(assParser.POINT, 0); }
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public TerminalNode MINUS() { return getToken(assParser.MINUS, 0); }
		public FloatValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitFloatValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FloatValueContext floatValue() throws RecognitionException {
		FloatValueContext _localctx = new FloatValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_floatValue);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(161);
				match(MINUS);
				}
			}

			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				{
				setState(164);
				match(ZERO);
				}
				break;
			case NATURAL:
				{
				setState(165);
				match(NATURAL);
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ZERO || _la==NATURAL) {
					{
					{
					setState(166);
					_la = _input.LA(1);
					if ( !(_la==ZERO || _la==NATURAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(174);
			match(POINT);
			setState(176); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(175);
					_la = _input.LA(1);
					if ( !(_la==ZERO || _la==NATURAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(178); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
